# hrm_backend

./: .env.example  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: backend_hrm.yml
src/attendance_routes/: attendance_checks.py  attendance_main_routes.py
src/calendar_routes/: calendar_checks.py  calendar_main_routes.py  calendar_models.py  calendar_setting.py
src/career_routes/: career_checks.py  career_models.py  career_settings.py  careers_routes.py
src/common_routes/: common_checks.py  common_models.py  user_routes.py
src/common_routes/email_templates/: office_mail_template.html  password_reset_template.html
src/login/: auth_models.py  login_checks.py
