[project]
name = "hrm-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.0.0",
    "bcrypt==4.0.1",
    "deepface>=0.0.96",
    "fastapi>=0.123.5",
    "jinja2>=3.1.6",
    "minio>=7.2.20",
    "passlib[bcrypt]==1.7.4",
    "postgrest>=2.24.0",
    "pydantic[email]>=2.12.5",
    "pyngrok>=7.5.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]
